# Linked-lists-in-Rust

./: Cargo.toml
src/: fifth_list.rs  first_list.rs  fourth_list.rs  lib.rs  second_list.rs  third_list.rs
